[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/themes/crafting_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/Panel_jrj_fixed.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Overlay

onready var inv = get_node(\"TabContainer/INVENTORY\")
onready var item_list = get_node(\"/TabContainer/INVENTORY/item_list\")
onready var craft_list = get_node(\"/TabContainer/CRAFT/items_list\")

onready var player_inventory = get_node(\"../../inventory\")

var update_inventory := false


func _ready():
	get_tree().paused = true
	update_inventory = true
	pass
	
	
func _physics_process(delta):
	if update_inventory:
		player_inventory.update()
		update_inventory = false
	
func _unhandled_input(event):
	if event.is_action_pressed(\"escape\") or event.is_action_pressed(\"inventory\"):
		player_inventory.display = false
		get_UI_controller().pop_overlay()
		get_tree().paused = false
		
		
		

func get_itemlist():
	return $TabContainer/INVENTORY/item_list
	
	
func get_craftlist():
	return $TabContainer/CRAFT/items_list

func update():
	for item in player_inventory.inventory:
			item_list.add_item(\"\",item.icon)
			craft_list.add_item(item.name,item.icon)
"

[sub_resource type="GDScript" id=2]
script/source = "extends Panel

var item_selected

onready var inventory = get_node(\"../../../../../inventory\")


func update_item(item):
	$Panel2/item_name.text = item.name
	$Panel/item_texture.texture = item.icon
	$Panel3/item_description.text = item.description

func _on_item_list_item_selected(index):
	item_selected = inventory.inventory[index]
	update_item(item_selected)

"

[sub_resource type="GDScript" id=3]
script/source = "extends IMTabs

var item_selected
var crafted
var row11
var row12
var row13
var row21
var row22
var row23
var row31
var row32
var row33



var rows_id = 0

var items = [null,null,null,null,null,null,null,null,null]
var recipes = []

var add_to_table = 0

onready var inventory = get_node(\"../../../../inventory\")
onready var UI_Inventory = get_node(\"../..\")


func _ready():
	recipes()

func _physics_process(delta):
	if Input.is_action_just_pressed(\"inventory\") or Input.is_action_just_pressed(\"escape\"):
		update()

func _on_items_list_item_activated(index):
	if add_to_table < 9:
		item_selected = inventory.inventory[index]
		add_to_craft(item_selected)
		inventory.inventory.remove(index)
		inventory.item_list.clear()
		inventory.craft_list.clear()
		inventory.update()
	else:
		$message_panel/message.text = \"Can not add more items to the table\"

func add_to_craft(item):
	if $Panel/item1.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row11 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item1.add_item(\"\",item.icon)
		
	elif $Panel/item2.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row12 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item2.add_item(\"\",item.icon)
		
	elif $Panel/item3.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row13 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item3.add_item(\"\",item.icon)
		
	elif $Panel/item4.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row21 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item4.add_item(\"\",item.icon)
		
	elif $Panel/item5.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row22 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item5.add_item(\"\",item.icon)
	
	elif $Panel/item6.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row23 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item6.add_item(\"\",item.icon)
	
	elif $Panel/item7.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row31 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item7.add_item(\"\",item.icon)
		
	elif $Panel/item8.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row32 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item8.add_item(\"\",item.icon)
		
	elif $Panel/item9.get_item_count() == 0:
		add_to_table = add_to_table + 1
		row33 = item
		inventory.craft_inventory.push_back(item)
		$Panel/item9.add_item(\"\",item.icon)




func check_for_item():
	for i in range(0,9):
		items.remove(0)
	rows_id = 0
	if row11 != null:
		rows_id = rows_id + 0
		items.push_back(row11)
	else:
		items.push_back(null)
		
	if row12 != null:
		rows_id = rows_id + 1
		items.push_back(row12)
	else:
		items.push_back(null)
		
	if row13 != null:
		rows_id = rows_id + 2
		items.push_back(row13)
	else:
		items.push_back(null)
		
	if row21 != null:
		rows_id = rows_id + 3
		items.push_back(row21)
	else:
		items.push_back(null)
		
	if row22 != null:
		rows_id = rows_id + 4
		items.push_back(row22)
	else:
		items.push_back(null)
		
	if row23 != null:
		rows_id = rows_id + 5
		items.push_back(row23)
	else:
		items.push_back(null)
		
	if row31 != null:
		rows_id = rows_id + 6
		items.push_back(row31)
	else:
		items.push_back(null)
		
	if row32 != null:
		rows_id = rows_id + 7
		items.push_back(row32)
	else:
		items.push_back(null)
		
	if row33 != null:
		rows_id = rows_id + 8
		items.push_back(row33)
	else:
		items.push_back(null)
	pass







func row(item,index):
	if index == 0:
		row11 = item
	elif index == 1:
		row12 = item
	elif index == 2:
		row13 = item
	elif index == 3:
		row21 = item
	elif index == 4:
		row22 = item
	elif index == 5:
		row23 = item
	elif index == 6:
		row31 = item
	elif index == 7:
		row32 = item
	elif index == 8:
		row33 = item
		
func craft():
	var result
	for i in recipes:
		result = i.check(rows_id,items)
	if result != null:
		crafted = result
		$Panel/item10.add_item(\"\",crafted.icon)
		$message_panel/message.text = crafted.name + \" crafted and added to the inventory\"
		UI_Inventory.update_inventory = true
	else:
		crafted = null
		$Panel/item10.remove_item(0)
		
func update():
	add_to_table = 0
	for i in range(0,9):
		if not inventory.craft_inventory.empty():
			if i == 0:
				if row11 != null:
					$Panel/item1.remove_item(0)
					inventory.inventory.push_back(row11)
					row11 = null
			elif i == 1:
				if row12 != null:
					$Panel/item2.remove_item(0)
					inventory.inventory.push_back(row12)
					row12 = null
			elif i == 2:
				if row13 != null:
					$Panel/item3.remove_item(0)
					inventory.inventory.push_back(row13)
					row13 = null
			elif i == 3:
				if row21 != null:
					$Panel/item4.remove_item(0)
					inventory.inventory.push_back(row21)
					row21 = null
			elif i == 4:
				if row22 != null:
					$Panel/item5.remove_item(0)
					inventory.inventory.push_back(row22)
					row22 = null
			elif i == 5:
				if row23 != null:
					$Panel/item6.remove_item(0)
					inventory.inventory.push_back(row23)
					row23 = null
			elif i == 6:
				if row31 != null:
					$Panel/item7.remove_item(0)
					inventory.inventory.push_back(row31)
					row31 = null
			elif i == 7:
				if row32 != null:
					$Panel/item8.remove_item(0)
					inventory.inventory.push_back(row32)
					row32 = null
			elif i == 8:
				if row33 != null:
					$Panel/item9.remove_item(0)
					inventory.inventory.push_back(row33)
					row33 = null
	$message_panel/message.text = \"Please insert items to be crafted into the table\"
					
	for i in range(0,9):
		if not inventory.craft_inventory.empty():
			inventory.craft_inventory.remove(0)




func _on_craft_pressed():
	if row11 != null or row12 != null or row13 != null or row21 != null or row22 != null or row23 != null or row31 != null or row32 != null or row33 != null:
			check_for_item()
			craft()
			if crafted != null:
				add_crafted_to_inventory()
				inventory.update()
				UI_Inventory.update_inventory = true
			else:
				$message_panel/message.text = \"Wrong Combination of Items\"
	else:
		$Panel/item10.remove_item(0)
		$message_panel/message.text = \"Please Enter Items\"
			
			
			
func add_crafted_to_inventory():
	for i in range(0,9):
		if not inventory.craft_inventory.empty():
			if i == 0:
				if row11 != null:
					$Panel/item1.remove_item(0)
					row11 = null
			elif i == 1:
				if row12 != null:
					$Panel/item2.remove_item(0)
					row12 = null
			elif i == 2:
				if row13 != null:
					$Panel/item3.remove_item(0)
					row13 = null
			elif i == 3:
				if row21 != null:
					$Panel/item4.remove_item(0)
					row21 = null
			elif i == 4:
				if row22 != null:
					$Panel/item5.remove_item(0)
					row22 = null
			elif i == 5:
				if row23 != null:
					$Panel/item6.remove_item(0)
					row23 = null
			elif i == 6:
				if row31 != null:
					$Panel/item7.remove_item(0)
					row31 = null
			elif i == 7:
				if row32 != null:
					$Panel/item8.remove_item(0)
					row32 = null
			elif i == 8:
				if row33 != null:
					$Panel/item9.remove_item(0)
					row33 = null
					
	for i in range(0,9):
		if not inventory.craft_inventory.empty():
			inventory.craft_inventory.remove(0)
	
	if crafted != null:
		inventory.inventory.push_back(crafted)
		crafted = null
	


func _on_reset_pressed():
	update()
	UI_Inventory.update_inventory = true
	
	
	
	
#####################################
####       load recipes           ###
#####################################

func recipes():
	var file_paths = list_files_in_directory(\"res://src/devices/items/test/recipes/\")
	for path in file_paths:
		var recipe = load(\"res://src/devices/items/test/recipes/\" + path)
		recipes.append(recipe)
		print(recipe)
	
func list_files_in_directory(path):
	var files = []
	var dir = Directory.new()
	dir.open(path)
	dir.list_dir_begin()

	while true:
		var file = dir.get_next()
		if file == \"\":
			break
		elif not file.begins_with(\".\"):
			files.append(file)

	dir.list_dir_end()

	return files
"

[node name="inventory" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="INVENTORY" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 18.0
rect_min_size = Vector2( 256, 126 )

[node name="item_description" type="Panel" parent="TabContainer/INVENTORY"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -61.0
margin_right = -8.0
margin_bottom = 55.0
script = SubResource( 2 )

[node name="Panel" type="Panel" parent="TabContainer/INVENTORY/item_description"]
margin_left = 4.0
margin_top = 4.0
margin_right = 28.0
margin_bottom = 28.0

[node name="item_texture" type="TextureRect" parent="TabContainer/INVENTORY/item_description/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
stretch_mode = 1

[node name="Panel2" type="Panel" parent="TabContainer/INVENTORY/item_description"]
margin_left = 32.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 28.0

[node name="item_name" type="Label" parent="TabContainer/INVENTORY/item_description/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
valign = 1
autowrap = true

[node name="Panel3" type="Panel" parent="TabContainer/INVENTORY/item_description"]
margin_left = 4.0
margin_top = 32.0
margin_right = 92.0
margin_bottom = 112.0

[node name="item_description" type="RichTextLabel" parent="TabContainer/INVENTORY/item_description/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="item_list" type="ItemList" parent="TabContainer/INVENTORY"]
margin_left = 8.0
margin_top = 11.0
margin_right = 144.0
margin_bottom = 98.0
max_columns = 6
fixed_column_width = 16
fixed_icon_size = Vector2( 16, 16 )

[node name="Label" type="Label" parent="TabContainer/INVENTORY"]
margin_left = 8.0
margin_top = 2.0
margin_right = 140.0
margin_bottom = 10.0
text = "ITEMS"

[node name="equip" type="Button" parent="TabContainer/INVENTORY"]
margin_left = 8.0
margin_top = 102.0
margin_right = 44.0
margin_bottom = 118.0
focus_mode = 0
enabled_focus_mode = 0
text = "EQUIP"

[node name="use" type="Button" parent="TabContainer/INVENTORY"]
margin_left = 52.0
margin_top = 102.0
margin_right = 92.0
margin_bottom = 118.0
focus_mode = 0
enabled_focus_mode = 0
text = "USE"

[node name="drop" type="Button" parent="TabContainer/INVENTORY"]
margin_left = 100.0
margin_top = 102.0
margin_right = 140.0
margin_bottom = 118.0
focus_mode = 0
enabled_focus_mode = 0
text = "DROP"

[node name="CRAFT" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 18.0
rect_min_size = Vector2( 256, 126 )
script = SubResource( 3 )

[node name="items_list" type="ItemList" parent="TabContainer/CRAFT"]
margin_left = 20.0
margin_top = 14.0
margin_right = 120.0
margin_bottom = 100.0
fixed_icon_size = Vector2( 16, 16 )

[node name="Label" type="Label" parent="TabContainer/CRAFT"]
margin_left = 21.3059
margin_top = 6.54207
margin_right = 121.306
margin_bottom = 14.5421
text = "ITEMS"
valign = 1

[node name="Label2" type="Label" parent="TabContainer/CRAFT"]
margin_left = 132.581
margin_top = 6.06156
margin_right = 232.581
margin_bottom = 14.0616
text = "CRAFTING"
valign = 1

[node name="Panel" type="Panel" parent="TabContainer/CRAFT"]
margin_left = 132.0
margin_top = 14.0
margin_right = 218.0
margin_bottom = 100.0
script = ExtResource( 2 )

[node name="item1" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 4.0
margin_top = 3.0
margin_right = 28.0
margin_bottom = 27.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 20, 20 )
same_column_width = true
fixed_column_width = 16
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item2" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 31.0
margin_top = 3.0
margin_right = 55.0
margin_bottom = 27.0
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item3" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 58.0
margin_top = 3.0
margin_right = 82.0
margin_bottom = 27.0
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item4" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 4.0
margin_top = 30.0
margin_right = 28.0
margin_bottom = 54.0
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item5" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 31.0
margin_top = 30.0
margin_right = 55.0
margin_bottom = 54.0
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item6" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 58.0
margin_top = 30.3059
margin_right = 82.0
margin_bottom = 54.3059
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item7" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 4.0
margin_top = 57.0
margin_right = 28.0
margin_bottom = 81.0
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item8" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 31.0
margin_top = 57.0
margin_right = 55.0
margin_bottom = 81.0
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item9" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 58.0
margin_top = 57.0
margin_right = 82.0
margin_bottom = 81.0
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item10" type="ItemList" parent="TabContainer/CRAFT/Panel"]
margin_left = 92.3315
margin_top = 1.8662
margin_right = 116.331
margin_bottom = 25.8662
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="craft" type="Button" parent="TabContainer/CRAFT"]
margin_left = 220.628
margin_top = 45.0
margin_right = 252.628
margin_bottom = 61.0
focus_mode = 0
enabled_focus_mode = 0
text = "CRAFT"

[node name="reset" type="Button" parent="TabContainer/CRAFT"]
margin_left = 220.976
margin_top = 63.0
margin_right = 252.976
margin_bottom = 79.0
focus_mode = 0
enabled_focus_mode = 0
text = "RESET"

[node name="message_panel" type="Panel" parent="TabContainer/CRAFT"]
margin_left = 20.0
margin_top = 103.0
margin_right = 248.0
margin_bottom = 124.0

[node name="message" type="Label" parent="TabContainer/CRAFT/message_panel"]
margin_left = 3.0
margin_top = 1.0
margin_right = 226.0
margin_bottom = 20.0
text = "Please insert items to be crafted into the table"
autowrap = true
clip_text = true
[connection signal="tab_changed" from="TabContainer" to="TabContainer/CRAFT" method="_on_TabContainer_tab_changed"]
[connection signal="tab_changed" from="TabContainer" to="TabContainer/INVENTORY" method="_on_TabContainer_tab_changed"]
[connection signal="item_selected" from="TabContainer/INVENTORY/item_list" to="TabContainer/INVENTORY/item_description" method="_on_item_list_item_selected"]
[connection signal="item_activated" from="TabContainer/CRAFT/items_list" to="TabContainer/CRAFT" method="_on_items_list_item_activated"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item1" to="TabContainer/CRAFT/Panel" method="_on_item1_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item1" to="TabContainer/CRAFT/Panel" method="_on_item1_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item2" to="TabContainer/CRAFT/Panel" method="_on_item2_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item2" to="TabContainer/CRAFT/Panel" method="_on_item2_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item3" to="TabContainer/CRAFT/Panel" method="_on_item3_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item3" to="TabContainer/CRAFT/Panel" method="_on_item3_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item4" to="TabContainer/CRAFT/Panel" method="_on_item4_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item4" to="TabContainer/CRAFT/Panel" method="_on_item4_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item5" to="TabContainer/CRAFT/Panel" method="_on_item5_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item5" to="TabContainer/CRAFT/Panel" method="_on_item5_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item6" to="TabContainer/CRAFT/Panel" method="_on_item6_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item6" to="TabContainer/CRAFT/Panel" method="_on_item6_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item7" to="TabContainer/CRAFT/Panel" method="_on_item7_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item7" to="TabContainer/CRAFT/Panel" method="_on_item7_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item8" to="TabContainer/CRAFT/Panel" method="_on_item8_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item8" to="TabContainer/CRAFT/Panel" method="_on_item8_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item9" to="TabContainer/CRAFT/Panel" method="_on_item9_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item9" to="TabContainer/CRAFT/Panel" method="_on_item9_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/CRAFT/Panel/item10" to="TabContainer/CRAFT/Panel" method="_on_item9_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/CRAFT/Panel/item10" to="TabContainer/CRAFT/Panel" method="_on_item9_mouse_exited"]
[connection signal="pressed" from="TabContainer/CRAFT/craft" to="TabContainer/CRAFT" method="_on_craft_pressed"]
[connection signal="pressed" from="TabContainer/CRAFT/reset" to="TabContainer/CRAFT" method="_on_reset_pressed"]
